<resources>
    <string name="app_name">Blimey</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="downstairs">Downstairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Upstairs</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>
</resources>