<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/light_black"
        android:layout_height="?android:attr/actionBarSize"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/ic_eye_24"
        app:titleTextColor="@color/white"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_gravity="center"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/wave"/>

        <TableLayout
            android:id="@+id/table"
            android:layout_above="@id/bottomnavview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="0dp"
            tools:context="io.github.introml.activityrecognition.MainActivity">

            <TableRow
                android:id="@+id/title_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:textAlignment="center"
                android:background="@android:color/holo_green_light">

                <TextView
                    android:id="@+id/title"
                    android:layout_weight="1"
                    android:text="@string/activity"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_weight="1"
                    android:text="@string/probability"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"/>
            </TableRow>

            <TableRow
                android:id="@+id/downstairsTableRow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/downstairs_title"
                    android:layout_weight="1"
                    android:text="@string/downstairs"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/downstairsTextView"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/joggingTableRow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/jogging_title"
                    android:layout_weight="1"
                    android:text="@string/jogging"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/joggingTextView"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/sittingTableRow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/sitting_title"
                    android:layout_weight="1"
                    android:text="@string/sitting"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sittingTextView"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/standingTableRow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/standing_title"
                    android:layout_weight="1"
                    android:text="@string/standing"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standingTextView"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/upstairsTableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/upstairs_title"
                    android:layout_weight="1"
                    android:text="@string/upstairs"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/upstairsTextView"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/walkingTableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/walking_title"
                    android:layout_weight="1"
                    android:text="@string/walking"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/walkingTextView"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/bikingTableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/biking_title"
                    android:layout_weight="1"
                    android:text="@string/biking"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bikingTextView"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_black"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation" />
</RelativeLayout>